Admin panel, task list filtering based on user, front page, task page for logged out user

--- a/templates/front.html
+++ b/templates/front.html
@@ -1,3 +1,18 @@
-<html>
-Checking
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container">
+        <div class="row">
+          <div class="span9">
+
+          	<h4>
+      	    Tired of forgetting stuff ?<br>
+      	    Reminder Service is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders by creating reminder tasks in less than 10 seconds.
+           </h4>
+      </div>
+    
+      </div>
+      
+
+    </div>
+{% endblock %}
