--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   });
   </script>
 </head>
-<body>
+<body onload="$('#{{active}}').addClass('active');">
   <div class="container">
 
 <div class="navbar navbar-inverse">
@@ -21,12 +21,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">Reminder Service</a>
+        <a class="brand" href="/">Reminder Service</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">About</a></li>
+            <li id="front" ><a href="/">Home</a></li>
+            {% if not current_user.email %}
+            <li id="new_user_task"><a href="/new_user_task">Tasks</a></li>
+            
+            {% else %}
+            <li id="task_list"><a href="/task_list">Tasks</a></li>
+            {% endif %}
+            
           </ul>
             
           <ul class="nav pull-right">
