--- a/templates/list.html
+++ b/templates/list.html
@@ -210,7 +210,7 @@
           			   </div>
 
           			   <div class="control-group">
-			            <label class="control-label" for="input01">Recipients</label>
+			            <label class="control-label" for="input01">Recipient</label>
 			            <div class="controls">
 			              <input type="text" class="input-xlarge" id="details" name="details">
 			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
