--- a/templates/list.html
+++ b/templates/list.html
@@ -193,7 +193,8 @@
 			            <div class="controls">
 			              <select id="method" name="method">
 			                <option>Email</option>
-							<option>SMS</option>			                
+							<option>SMS</option>
+							<option>Voice</option>			                
 			              </select>
 			              
 			            </div>
