--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
               
                                
                   
-                  <input type="text" id="name" name="username" placeholder="Email/Username">
+                  <input type="text" id="name" name="username" placeholder="Email">
                    
                   <br>
                   <br>
