Task details, website copy

--- a/templates/front.html
+++ b/templates/front.html
@@ -6,9 +6,28 @@
           <div class="span9">
 
           	<h4>
-      	    Tired of forgetting stuff ?<br>
-      	    Reminder Service is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders by creating reminder tasks in less than 10 seconds.
-           </h4>
+      	    Dont forget anything ever again<br>
+      	    </h4>
+      	    <h5>
+      	    Reminder Service is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders, or even voice reminders by creating reminder tasks in less than 10 seconds.
+      	    <a href="/login">Try It - no credit card details required</a>
+
+      	</h5>
+      		<h4>
+      			Why do I need this ?
+      		</h4>
+      		<h5>
+      			If you are in the habit of forgetting stuff, especially the important stuff, then this might be just the thing you need. Also, if you are still using notepads or email to keep track of stuff then you could consider this service which presents a unified framework combining email, sms and voice so that managing and remembering tasks is easier.
+      		</h5>
+      		<h4>I am already using my phone to remind myself</h4>
+      		<h5>
+      			Its a good step towards remembering stuff but not quite comprehensive. Your phone is the only device from which you can access your reminders. Besides you cant get voice reminders or even email reminders using your phone.
+      			If you are convinced, <a href="/login">give it a try </a> - no credit card details required.
+      		</h5>
+
+
+
+           
       </div>
     
       </div>
