--- a/templates/new_user_task.html
+++ b/templates/new_user_task.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
         <div class="row">
-          <div class="span9">
+          <div class="col-lg-9">
 
           	<h4>
       	   <a href="/signup">SignUp</a> or <a href="/login">Login</a> to begin creating tasks in less than 10 seconds 
