--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,15 @@
 <html>
 <head>
-  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--[if lt IE 9]>
+<script src="dist/html5shiv.js"></script>
+<![endif]-->
+   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  <script src="/static/javascript/bootstrap.min.js"></script>
+  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet">
+  
   <script>
   $(function() {
     $( "#datepicker" ).datepicker();
@@ -14,16 +20,15 @@
   <div class="container">
 
 <div class="navbar navbar-inverse">
-    <div class="navbar-inner">
-      <div class="container" style="width: auto;">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="/">Reminder Service</a>
-        <div class="nav-collapse">
-          <ul class="nav">
+        </button>
+        <a class="navbar-brand" href="/">Re-Mind</a>
+        <div class="nav-collapse collapse navbar-inverse-collapse">
+          <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
             {% if not current_user.email %}
             <li id="new_user_task"><a href="/new_user_task">Tasks</a></li>
@@ -34,7 +39,7 @@
             
           </ul>
             
-          <ul class="nav pull-right">
+          <ul class="nav navbar-nav pull-right">
                {% if not current_user.email %}
                 
                 <li id='signup' class="pull-right"><a href="/signup">SignUp</a></li>
@@ -52,7 +57,7 @@
           </ul>
         </div><!-- /.nav-collapse -->
       </div>
-    </div><!-- /navbar-inner -->
+    
   </div><!-- /navbar -->
 </div>
   {% block content %}
