--- a/templates/login.html
+++ b/templates/login.html
@@ -3,74 +3,79 @@
 {% block content %}
         <div class="container">
         <div class="row">
-          <div class="span7">
+          <div class="col-lg-7">
 
            
            <div class="row">
-            <div class="span6">
+            <div class="col-lg-12">
               <div>{{signup_error}}</div>
-           <form id="form" class="form-horizontal well" action="/signup" method="post">
+           <form id="form" class="form-horizontal" action="/signup" method="post">
             <fieldset>
               <legend>Create a new account here</legend>
-              <div class="control-group">
+              <div class="form-group">
                 
-                  <label class="control-label" for="email">Email Id </label>
-                  <div class="controls">
-                  <input type="text" id="email"  name="email" placeholder="{{email}}" value="{{email}}">
+                  <label class="control-label col-lg-2" for="email">Email Id </label>
+                  <div class="col-lg-8">
+                  <input type="text" id="email"  class="form-control" name="email" placeholder="{{email}}" value="{{email}}">
                   </div>
               </div>
-              <div class="control-group">
+              <div class="form-group">
                 
-                  <label class="control-label" for="username" >Name</label>
-                  <div class="controls">
-                  <input type="text" id="username" name="username" placeholder="{{username}}" value="{{username}}">
+                  <label class="control-label col-lg-2" for="username" >Name</label>
+                  <div class="col-lg-8">
+                  <input type="text" id="username" class="form-control" name="username" placeholder="{{username}}" value="{{username}}">
                   
                 </div>
               </div>
-              <div class="control-group">
+              <div class="form-group">
                 
-                  <label class="control-label" for="password">Password</label>
-                  <div class="controls">
-                  <input type="password" id="password" name="password">
+                  <label class="control-label col-lg-2" for="password">Password</label>
+                  <div class="col-lg-8">
+                  <input type="password" id="password" class="form-control" name="password">
                   <p class="help-block">Should be atleast 5 characters</p>
                 </div>
               </div>
-              <div class="control-group">
+              <div class="form-group">
                 
-                  <label class="control-label" for="confirm_password">Confirm Password</label>
-                  <div class="controls">
-                  <input type="password" id="confirm_password" name="confirm_password">
+                  <label class="control-label col-lg-2" for="confirm_password">Confirm Password</label>
+                  <div class="col-lg-8">
+                  <input type="password" id="confirm_password" class="form-control" name="confirm_password">
                   
                 </div>
               </div>
               <div class="form-actions">
+                <center>
                 <input type="submit" class="btn btn-primary"></input>
+              </center>
               </div>
             </fieldset>
           </form>
         </div>
       </div>
     </div>
-        <div class="span5" style="position:relative;">
+        <div class="col-lg-5" style="position:relative;">
           <div>{{error}}</div>
-          <form class="well form-horizontal" action="/login" method="post" id="login">
+          <form class="form-horizontal" action="/login" method="post" id="login">
             <fieldset>
-              <legend>Already a member? <br>Login below</legend>
+              <legend>Already a member? Login below</legend>
               
                                
+                  <div class="form-group">
+                    <label class="control-label col-lg-3" for="name">Email Id </label>
+                    <div class="col-lg-9">
+                  <input type="text" id="name" class="form-control" name="username" placeholder="Email">
+                </div>
+                   </div>            
                   
-                  <input type="text" id="name" name="username" placeholder="Email">
-                   
-                  <br>
-                  <br>
-                
-                  
-                  
-                  <input type="password" id="login_password" name="password" placeholder="Password" onkeydown="if (event.keyCode==19) { document.getElementById('login_submit').focus();}">
-                  <br>
-                  <br>
+                  <div class="form-group">
+                    <label class="control-label col-lg-3" for="login_password">Password</label>
+                    <div class="col-lg-9">
+                  <input type="password" id="login_password" class="form-control" name="password" placeholder="Password" onkeydown="if (event.keyCode==19) { document.getElementById('login_submit').focus();}">
+                </div>
+                </div>
+                  <center>
                   <button id="login_submit" type="submit" class="btn btn-primary" style="margin-bottom:0px;">Submit</button>
-                  
+                  </center>
                 
               
             </fieldset>
