--- a/templates/task.html
+++ b/templates/task.html
@@ -3,7 +3,7 @@
 {% block content %}
         <div class="container">
         <div class="row">
-          <div class="span9">
+          <div class="col-lg-9">
             <table class="table table-bordered table-striped table-hover">
               <thead>
                 <tr>
