--- a/templates/activate.html
+++ b/templates/activate.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
         <div class="row">
-          <div class="span10">
+          <div class="col-md-10 col-sm-12">
 
       	   <h4> {{message}}</h4>
            
