--- a/templates/base.html
+++ b/templates/base.html
@@ -19,15 +19,15 @@
 <body onload="$('#{{active}}').addClass('active');">
   <div class="container">
 
-<div class="navbar navbar-inverse">
+<div class="navbar navbar-default">
     <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">Re-Mind</a>
-        <div class="nav-collapse collapse navbar-inverse-collapse">
+        <div class="nav-collapse collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
             {% if not current_user.email %}
