--- a/templates/checkmail.html
+++ b/templates/checkmail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
         <div class="row">
-          <div class="span10">
+          <div class="col-md-10 col-sm-10">
 
       	   <h4> Thanks for signing up. You're almost there.</h4>
            <h4> Click the link we emailed you to activate your account. </h4>
