--- a/templates/front.html
+++ b/templates/front.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-md-9">
 
           	<h4>
       	    Dont forget anything ever again<br>
