--- a/templates/login.html
+++ b/templates/login.html
@@ -3,42 +3,42 @@
 {% block content %}
         <div class="container">
         <div class="row">
-          <div class="col-lg-7">
+          <div class="col-lg-7 col-md-7">
 
            
            <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 col-md-12">
               <div>{{signup_error}}</div>
            <form id="form" class="form-horizontal" action="/signup" method="post">
             <fieldset>
               <legend>Create a new account here</legend>
               <div class="form-group">
                 
-                  <label class="control-label col-lg-2" for="email">Email Id </label>
-                  <div class="col-lg-8">
+                  <label class="control-label col-lg-2 col-md-2" for="email">Email Id </label>
+                  <div class="col-lg-8 col-md-8">
                   <input type="text" id="email"  class="form-control" name="email" placeholder="{{email}}" value="{{email}}">
                   </div>
               </div>
               <div class="form-group">
                 
-                  <label class="control-label col-lg-2" for="username" >Name</label>
-                  <div class="col-lg-8">
+                  <label class="control-label col-lg-2 col-md-2" for="username" >Name</label>
+                  <div class="col-lg-8 col-md-8">
                   <input type="text" id="username" class="form-control" name="username" placeholder="{{username}}" value="{{username}}">
                   
                 </div>
               </div>
               <div class="form-group">
                 
-                  <label class="control-label col-lg-2" for="password">Password</label>
-                  <div class="col-lg-8">
+                  <label class="control-label col-lg-2 col-md-2" for="password">Password</label>
+                  <div class="col-lg-8 col-md-8">
                   <input type="password" id="password" class="form-control" name="password">
                   <p class="help-block">Should be atleast 5 characters</p>
                 </div>
               </div>
               <div class="form-group">
                 
-                  <label class="control-label col-lg-2" for="confirm_password">Confirm Password</label>
-                  <div class="col-lg-8">
+                  <label class="control-label col-lg-2 col-md-2" for="confirm_password">Confirm Password</label>
+                  <div class="col-lg-8 col-md-8">
                   <input type="password" id="confirm_password" class="form-control" name="confirm_password">
                   
                 </div>
@@ -61,15 +61,15 @@
               
                                
                   <div class="form-group">
-                    <label class="control-label col-lg-3" for="name">Email Id </label>
-                    <div class="col-lg-9">
+                    <label class="control-label col-lg-3 col-md-3" for="name">Email Id </label>
+                    <div class="col-lg-9 col-md-9">
                   <input type="text" id="name" class="form-control" name="username" placeholder="Email">
                 </div>
                    </div>            
                   
                   <div class="form-group">
-                    <label class="control-label col-lg-3" for="login_password">Password</label>
-                    <div class="col-lg-9">
+                    <label class="control-label col-lg-3 col-md-3" for="login_password">Password</label>
+                    <div class="col-lg-9 col-md-9">
                   <input type="password" id="login_password" class="form-control" name="password" placeholder="Password" onkeydown="if (event.keyCode==19) { document.getElementById('login_submit').focus();}">
                 </div>
                 </div>
