--- a/templates/task.html
+++ b/templates/task.html
@@ -3,7 +3,7 @@
 {% block content %}
         <div class="container">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-9 col-md-9">
             <table class="table table-bordered table-striped table-hover">
               <thead>
                 <tr>
@@ -57,7 +57,7 @@
               </tbody>
             </table>
             <div class="row">
-              <div class="span7">
+              <div class="col-lg-7 col-md-7">
                 Tasks cannot be edited at this time. However, you can delete a task and create a new task with the correct information.
                 <br>
               <b><a href="/delete_task?id={{task['_id']}}">Delete this task</a></b>
